<resources>
    <string name="app_name">WP4U</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_email">Enter Email</string>
    <string name="logout">Logout</string>
    <string name="already_login">Already have an account?</string>
    <string name="no_account">Don\'t have an account yet?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_out">Sign Out</string>
    <string name="image_options">Image options</string>
    <string name="replace_image">Replace image</string>
    <string name="delete_image">Delete image</string>
    <string name="delete_image_confirm">Remove this image from the board? The picture will be deleted.</string>
    <string name="board_image_description">Vision board image</string>
    <string name="drag_handle_glyph">≡</string>
    <string name="drag_handle_description">Drag to reorder</string>
    <string name="welcome_message">Welcome to WP4U</string>
</resources>