<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="48dp"
    android:background="#D7E5F7"
    tools:context=".ui.accounts.CreateAccount">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/great_vibes"
        android:text="@string/welcome_message"
        android:textColor="#021D4F"
        android:textSize="35sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/createEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:layout_marginBottom="5dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/createUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:layout_marginBottom="5dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/createPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_marginBottom="5dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="50dp"
        android:fontFamily="@font/castoro_italic"
        android:text="@string/create_account"
        android:textSize="15sp"
        app:backgroundTint="#021D4F" />

    <TextView
        android:id="@+id/alreadyLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textStyle="bold"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/castoro_italic"
        android:text="@string/already_login" />

    <Button
        android:id="@+id/signIn"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        app:backgroundTint="#021D4F"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/castoro_italic"
        android:text="@string/login" />

</LinearLayout>